initial inspection extension impl